# OdooMCPV20

./: .dockerignore  .env.example  .gitignore  .replit  CHATGPT_OAUTH_SETUP.md  Dockerfile  EASYPANEL_DEPLOYMENT.md  N8N_AGENT_PROMPTS.md  N8N_SETUP.md  OAUTH_DISCOVERY_FIX.md  README.md  SCHEMA_FIX.md  pyproject.toml  replit.md
attached_assets/: Pasted--errorMessage-Bad-request-please-check-your-parameters-errorDetails-rawErrorM-1760479743367_1760479743367.txt  Pasted-1-Rol-del-agente-Eres-un-Agente-de-Productos-Odoo-conectado-al-servidor-MCP-basado-en-odoo-mcp-se-1760479389313_1760479389313.txt  Pasted-Called-tool-Odoo-MCP-odoo-search-records-Request-model-res-partner-domain-limit-1--1760549121211_1760549121212.txt  Pasted-POST-HTTP-1-1-405-Method-Not-Allowed-Eso-significa-n8n-s-llega-a-tu-dominio-pero-tu-servidor--1760475252534_1760475252535.txt
mcp_server_odoo/: __init__.py  __main__.py  auth.py  cache.py  config.py  http_server.py  mcp_tools.py  oauth.py  odoo_client.py  server.py  tools.py
